[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/sprites/hexagon.png" type="Texture" id=1]
[ext_resource path="res://Hex.gd" type="Script" id=2]

[node name="Hex" type="Node2D"]
script = ExtResource( 2 )

[node name="Hexagon" type="Sprite" parent="."]
position = Vector2( 0, 7 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 7 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
scale = Vector2( 0.92, 0.92 )
polygon = PoolVector2Array( -16.3043, -16.3043, 0, -23.913, 16.3043, -16.3043, 16.3043, -1.08696, 0, 7, -16.3043, -1.08696 )

[node name="HoverTween" type="Tween" parent="."]

[connection signal="input_event" from="Area2D" to="." method="_on_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_exited"]
